--- a/pages/politicas.html
+++ b/pages/politicas.html
@@ -9,7 +9,7 @@
     <meta neam="description" content="">
     <!--Media query-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jordy Agbidi</title>
+    <title>Jordy M.H.A.</title>
 
     <!--Link con CSS-->
     <link rel="stylesheet" type="text/css" href="../css/services.css">
@@ -27,7 +27,7 @@
     <header id="header">
         <img src="" alt="perfil_jordyagbidi">
         <div>
-            <h1>Jordy M. H. Agbidi</h1>
+            <h1>Jordy M. H. A.</h1>
             <h2>Politicas de privacidad</h2>
         </div>
 
