--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <!--Link con icon-->
     <link rel="icon" type="image/png" href="media/icon/icon.png">
-
+    <script>
+        alert("Hola Bienvenido a mi web, soy Jordy A.M.H. Actualmente esta web esta en desarrollo y la estoy desarrollando. Cuando este completada, podras disfrutarla en su forma completa!! Buenos Dias y Buenas noches!!");
+    </script>
 </head>
 
 <body>
