--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Link con icon-->
     <link rel="icon" type="image/png" href="media/icon/icon.png">
     <script>
-        alert("Hola Bienvenido a mi web, soy Jordy A.M.H. Actualmente esta web esta en desarrollo y la estoy desarrollando. Cuando este completada, podras disfrutarla en su forma completa!! Buenos Dias y Buenas noches!!");
+        alert("Hola Bienvenido a mi web, soy Jordy A.M.H. Actualmente esta web esta en desarrollo y la estoy desarrollando en solitario desde cero. Cuando este completada, podras disfrutarla en su forma completa!! Buenos Dias y Buenas noches!!");
     </script>
 </head>
 
